[FEAT] add student to main router

--- a/app/src/app/layout/components/navbar/navbar.component.html
+++ b/app/src/app/layout/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar-items">
     <span routerLink="/">Home</span>
-    <span routerLink="/products/product-list">Products</span>
+    <span routerLink="/student/insert-student">insert student</span>
   </div>
   <div class="user-info">
     <span routerLink="/cart/main">Cart</span>
