[FEAT] add student list and some styles

--- a/app/src/app/layout/components/navbar/navbar.component.html
+++ b/app/src/app/layout/components/navbar/navbar.component.html
@@ -1,13 +1,8 @@
 <div class="navbar">
   <div class="navbar-items">
     <span routerLink="/">Home</span>
-    <span routerLink="/student/insert-student">insert student</span>
-  </div>
-  <div class="user-info">
-    <span routerLink="/cart/main">Cart</span>
-    <ng-template >
-      <span routerLink="/auth/authorization">Login / Register</span>
-    </ng-template>
+    <span routerLink="/student/insert-student">insert-student</span>
+    <span routerLink="/student/student-list">student-list</span>
   </div>
 </div>
 <div class="router">
